--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ designed to help Nigerian entrepreneurs manage stock and increase profits.
         Learn practical strategies to track, manage, and optimize your inventory to reduce losses and increase profits.
     </p>
     <div class="d-flex align-items-center">
-        <img src="img/testimonial-1.jpg" class="img-fluid rounded-circle" style="width: 60px; height: 60px;" alt="">
+        <img src="img/testimonial-1.jpeg" class="img-fluid rounded-circle" style="width: 60px; height: 60px;" alt="">
         <div class="ms-3">
             <h5>Admin</h5>
             <p class="mb-0">January 6, 2026</p>
@@ -449,7 +449,7 @@ designed to help Nigerian entrepreneurs manage stock and increase profits.
         Explore opportunities in non-dividend stocks to drive long-term business growth and capital appreciation.
     </p>
     <div class="d-flex align-items-center">
-        <img src="img/testimonial-1.jpg" class="img-fluid rounded-circle" style="width: 60px; height: 60px;" alt="">
+        <img src="img/team-1.png" class="img-fluid rounded-circle" style="width: 60px; height: 60px;" alt="">
         <div class="ms-3">
             <h5>Admin</h5>
             <p class="mb-0">January 6, 2026</p>
@@ -477,7 +477,7 @@ designed to help Nigerian entrepreneurs manage stock and increase profits.
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-1.jpg" class="img-fluid" alt="">
+                                <img src="img/team-1.png" class="img-fluid" alt="">
                             </div>
                             <div class="team-title">
                                 <h4 class="mb-0">Lead Developer</h4>
@@ -494,7 +494,7 @@ designed to help Nigerian entrepreneurs manage stock and increase profits.
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-2.jpg" class="img-fluid" alt="">
+                                <img src="img/team-2.jpeg" class="img-fluid" alt="">
                             </div>
                             <div class="team-title">
                                 <h4 class="mb-0">Michael symon</h4>
@@ -528,7 +528,7 @@ designed to help Nigerian entrepreneurs manage stock and increase profits.
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-4.jpg" class="img-fluid" alt="">
+                                <img src="img/team-4.jpeg" class="img-fluid" alt="">
                             </div>
                             <div class="team-title">
                                 <h4 class="mb-0">Emily Davis</h4>
