--- a/team.html
+++ b/team.html
@@ -132,7 +132,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-1.jpg" class="img-fluid" alt="">
+                                <img src="img/team-1.png" class="img-fluid" alt="">
                             </div>
                             <div class="team-title">
                                 <h4 class="mb-0">Lead Developer</h4>
@@ -149,7 +149,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-2.jpg" class="img-fluid" alt="">
+                                <img src="img/team-2.jpeg" class="img-fluid" alt="">
                             </div>
                             <div class="team-title">
                                 <h4 class="mb-0">Michael symon</h4>
@@ -183,7 +183,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-4.jpg" class="img-fluid" alt="">
+                                <img src="img/team-4.jpeg" class="img-fluid" alt="">
                             </div>
                             <div class="team-title">
                                 <h4 class="mb-0">Emily Davis</h4>
